--- a/index.html
+++ b/index.html
@@ -7,4 +7,13 @@
 </head>
 
 <body>
+	<div id="main"></div>
+	<div id="monkeys"></div>
+	<div id="bloons"></div>
+	<div id="upgrades"></div>
+	<div id="settings"></div>
+	<div id="updates"></div>
+	<div id="community"></div>
 	
+</body>
+</html>
